--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         <br>
         <a href="https://xerverium.github.io/home/" class="btn">Home</a> &nbsp
         <a href="https://xerverium.github.io/airdrop/" class="btn">Airdrop</a> &nbsp
-        <a class="btn1">Token</a> &nbsp 
+        <a class="btn1">Get</a> &nbsp 
+        <a href="https://xerverium.github.io/token/" class="btn">Token</a> &nbsp
         <a href="https://xerverium.github.io/wallet/" class="btn">Wallet</a>
         <br>
         <img src="poweredbyethereum-small.png" alt="pethereum">
