--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Xerverium|Token</title>
+    <title>Xerverium|Offering</title>
     <link rel="stylesheet" href="style.css">
     </head>
   <body>
@@ -10,9 +10,8 @@
       <div class="btext">
         <img src="xerveriumlogo.png" alt="Logo" width="70" height="70">
         <br>
-        <h1>Xerverium Token</h1>
+        <h1>Public Offering</h1>
         <br>
-        <h2>Contract Address</h2>
         <p>0x267B1Ba1887F4c7650932622E163a5E1879E0A72</p>
         <br>
         <h2>Symbol</h2>
@@ -21,8 +20,8 @@
         <h2>Decimals</h2>
         <p>18</p>
         <br>
-        <h2>Max Supply</h2>
-        <p>1,000,000,000</p>
+        <h2>0.001 ETH = 10,000 XVR</h2>
+        <h2>0.01 ETH = 100,000 XVR</h2>
         <br>
         <a href="https://xerverium.github.io/home/" class="btn">Home</a> &nbsp
         <a href="https://xerverium.github.io/airdrop/" class="btn">Airdrop</a> &nbsp
