--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
         <br>
         <h1>Public Offering</h1>
         <br>
+        <p>Xerverium offers the token for average users.</p>
+        <p>To help us to achieve the goal of Xerverium we invites you in our IPO.</p>
+        <br>
+        <h2>0.001 ETH = 10,000 XVR</h2>
+        <h2>0.01 ETH = 100,000 XVR</h2>
+        <br>
+        <p>Send to 0.001 up to 1ETH to this address</p>
         <p>0x267B1Ba1887F4c7650932622E163a5E1879E0A72</p>
         <br>
-        <h2>Symbol</h2>
-        <p>XVR</p>
-        <br>
-        <h2>Decimals</h2>
-        <p>18</p>
+        <p>Use 250,000 GAS Limit</p>
         <br>
         <h2>0.001 ETH = 10,000 XVR</h2>
         <h2>0.01 ETH = 100,000 XVR</h2>
