--- a/index.html
+++ b/index.html
@@ -15,16 +15,15 @@
         <p>Xerverium offers the token for average users.</p>
         <p>To help us to achieve the goal of Xerverium we invites you in our IPO.</p>
         <br>
-        <h2>0.001 ETH = 10,000 XVR</h2>
-        <h2>0.01 ETH = 100,000 XVR</h2>
-        <br>
-        <p>Send to 0.001 up to 1ETH to this address</p>
+        <p>Send to 0.001ETH up to 1ETH to this address</p>
         <p>0x267B1Ba1887F4c7650932622E163a5E1879E0A72</p>
+        <p>and received XVR token</p>
         <br>
         <p>Use 250,000 GAS Limit</p>
         <br>
         <h2>0.001 ETH = 10,000 XVR</h2>
         <h2>0.01 ETH = 100,000 XVR</h2>
+        <h2>0.1 ETH = 1,000,000 XVR</h2>
         <br>
         <a href="https://xerverium.github.io/home/" class="btn">Home</a> &nbsp
         <a href="https://xerverium.github.io/airdrop/" class="btn">Airdrop</a> &nbsp
