--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <br>
         <a href="https://xerverium.github.io/home/" class="btn">Home</a> &nbsp
         <a href="https://xerverium.github.io/airdrop/" class="btn">Airdrop</a> &nbsp
-        <a class="btn1">Get</a> &nbsp 
+        <a class="btn1">Offer</a> &nbsp 
         <a href="https://xerverium.github.io/token/" class="btn">Token</a> &nbsp
         <a href="https://xerverium.github.io/wallet/" class="btn">Wallet</a>
         <br>
