--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <br>
         <p>Send to 0.001ETH up to 1ETH to this address</p>
         <p>0x267B1Ba1887F4c7650932622E163a5E1879E0A72</p>
-        <p>and received XVR token</p>
+        <p>and received XVR token after the transaction.</p>
         <br>
         <p>Use 250,000 GAS Limit</p>
         <br>
