--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>Xerverium offers the token for average users.</p>
         <p>To help us to achieve the goal of Xerverium we invites you in our IPO.</p>
         <br>
-        <p>Send to 0.001ETH up to 1ETH to this address</p>
+        <p>Send 0.001ETH up to 1ETH to this address</p>
         <p>0x267B1Ba1887F4c7650932622E163a5E1879E0A72</p>
         <p>and received XVR token after the transaction.</p>
         <br>
